Bug 280406 - picture frame plasmoid: "open picture" (of the day) does not work
Summary: picture frame plasmoid: "open picture" (of the day) does not work
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-frame (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Anne-Marie Mahfouf
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-19 10:51 UTC by Janet
Modified: 2011-10-28 15:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2011-08-19 10:51:26 UTC
Version:           unspecified (using KDE 4.7.0) 
OS:                Linux

When I use the widget-frame to display the "picture of the day" from flickr, wikimedia etc. the context menu entry "open picture" does not do anything (I also tried doubleclicking but nothing happens). The picture is available in ~/.kde/share/apps/plasma_engine_podt/. 

Reproducible: Always

Steps to Reproduce:
Use e.g. the flickr picture of the day option for the frame widget. Try to open the shown picture (rightclick, open).

Actual Results:  
nothing

Expected Results:  
As the picture is available locally it should at least be displayed, as any other local picture, with your default picture viewer. The even more "natural feeling" way (what I expected when I tried to open the picture) would be to open the flickr page in your default browser, so that you can see the picture in full size.
Comment 1 Tanja Schulte 2011-08-29 11:10:10 UTC
I can confirm it. When I use a static local picture or a slideshow from a given folder the pictures do open in my picture viewer when I use the "view picture" menu item in the frame widget. But it does not work with remote ressources like picture of the day from fickr or wikimedia. The "view picture" menu item does nothing in that case.
Comment 2 Aaron J. Seigo 2011-10-28 15:05:27 UTC
Git commit c0360bc3ba5e6b049a6605309dcfc4e78d1b0675 by Aaron Seigo.
Committed on 28/10/2011 at 15:10.
Pushed by aseigo into branch 'master'.

provide a Url entry in the data which contains the path to the image

REVIEW:102817
BUG:280406

M  +1    -0    applets/frame/slideshow.cpp
M  +1    -2    dataengines/potd/cachedprovider.cpp
M  +5    -0    dataengines/potd/cachedprovider.h
M  +13   -4    dataengines/potd/potd.cpp

http://commits.kde.org/kdeplasma-addons/c0360bc3ba5e6b049a6605309dcfc4e78d1b0675