provide a Url entry in the data which contains the path to the image

REVIEW:102817
BUG:280406