dataengines/potd/cachedprovider.cpp
@@ -25,10 +25,9 @@
 
 #include <kstandarddirs.h>
 
-static QString identifierToPath( const QString &identifier )
+QString CachedProvider::identifierToPath( const QString &identifier )
 {
     const QString dataDir = KStandardDirs::locateLocal( "data", QLatin1String("plasma_engine_podt/") );
-
     return QString( dataDir + identifier );
 }
 
